# fractal-matrix-api

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TODO  build.rs  configure  fractal.doap  guillotine.doap  meson.build
.gitlab/issue_templates/: Bug.md  Feature.md
flatpak/: flatpak-build.sh  org.freedesktop.Sdk.Extension.rust-121.appdata.xml  org.freedesktop.Sdk.Extension.rust-121.json  org.freedesktop.Sdk.Extension.rust.json  org.gnome.Fractal.json  org.gnome.Fractal.json-rust-nightly
fractal-api/: Cargo.toml
fractal-api/src/: cache.rs  error.rs  globals.rs  types.rs  util.rs
fractal-api/src/backend/: directory.rs  media.rs  mod.rs  register.rs  room.rs  stickers.rs  sync.rs  types.rs  user.rs
fractal-api/src/model/: event.rs  member.rs  message.rs  mod.rs  protocol.rs  room.rs  stickers.rs
fractal-gtk/: Cargo.toml  build.rs
fractal-gtk/po/: LINGUAS  POTFILES.in  cs.po  es.po  fr.po  meson.build  pl.po  pt_BR.po  sk.po
fractal-gtk/res/: app.css  main_window.glade  meson.build  org.gnome.Fractal.appdata.xml  org.gnome.Fractal.desktop  org.gnome.Fractal.gschema.xml  resources.xml
fractal-gtk/res/gtk/: help-overlay.ui  menus.ui
fractal-gtk/res/ui/: account_settings.ui  add_room_menu.ui  audio_player.ui  autocomplete.ui  direct_chat.ui  filechooser.ui  invite.ui  invite_user.ui  join_room.ui  leave_room.ui  main_window.ui  markdown_popover.ui  media_viewer.ui  media_viewer_menu.ui  members.ui  new_room.ui  password_dialog.ui  room_config.ui  room_menu.ui  server_chooser_menu.ui  sticker_group.ui  stickers_popover.ui  user_menu.ui
fractal-gtk/src/: app.rs  backend.rs  cache.rs  error.rs  globals.rs  i18n.rs  main.rs  passwd.rs  static_resources.rs  uibuilder.rs  util.rs
fractal-gtk/src/app/: actions.rs  appop_loop.rs  backend_loop.rs  mod.rs
fractal-gtk/src/app/connect/: account.rs  attach.rs  autocomplete.rs  direct.rs  directory.rs  headerbar.rs  invite.rs  join_room.rs  leave_room.rs  load_more.rs  login.rs  markdown.rs  media_viewer.rs  mod.rs  more_members.rs  new_room.rs  room_config.rs  roomlist_search.rs  scroll.rs  search.rs  send.rs  spellcheck.rs  stickers.rs
fractal-gtk/src/appop/: about.rs  account.rs  attach.rs  directory.rs  files.rs  invite.rs  login.rs  media_viewer.rs  member.rs  message.rs  mod.rs  notifications.rs  notify.rs  room.rs  start_chat.rs  state.rs  stickers.rs  sync.rs  user.rs
fractal-gtk/src/model/: event.rs  room.rs
fractal-gtk/src/widgets/: address.rs  autocomplete.rs  avatar.rs  divider.rs  image.rs  inline_player.rs  member.rs  message.rs  mod.rs  room.rs  roomlist.rs  roomrow.rs
fractal-matrix-api/: Cargo.toml
fractal-matrix-api/src/: error.rs  globals.rs  lib.rs  util.rs
fractal-matrix-api/src/backend/: directory.rs  media.rs  mod.rs  room.rs  stickers.rs  sync.rs  types.rs  user.rs
fractal-matrix-api/src/model/: mod.rs  room.rs  stickers.rs  userinfo.rs
res/: app.css  main_window.glade  org.gnome.Fractal.appdata.xml  org.gnome.Fractal.desktop  resources.gresource  resources.xml
scripts/: cargo.sh  grabber.sh  new-release.sh  release.sh
src/: app.rs  backend.rs  cache.rs  emojis.rs  error.rs  globals.rs  main.rs  static_resources.rs  types.rs  util.rs  widgets.rs
src/model/: member.rs  message.rs  protocol.rs  room.rs
src/widgets/: message.rs  room.rs
tools/: emojis.py
