[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "guillotine"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
gdk = "0.6.0"
gdk-pixbuf = "0.2.0"
gio = "0.2.0"
glib = "0.3.1"
mime = "0.3.4"
pango = "0.2.0"
regex = "0.2.2"
reqwest = "0.7.3"
secret-service = "0.4.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
time = "0.1.38"
tree_magic = "0.2.0"
url = "1.5.1"
xdg = "2.1.0"

[dependencies.cairo-rs]
features = ["png"]
version = "0.2.0"

[dependencies.gtk]
features = ["v3_22"]
version = "0.2.0"

[dependencies.libnotify]
git = "https://github.com/danigm/rust-libnotify"
