[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-api"
version = "0.1.0"
workspace = "../"

[dependencies]
gdk = "0.7.0"
gdk-pixbuf = "0.3.0"
#gdk-pixbuf-sys = "0.5.0"
glib = "0.4.0"
mime = "0.3.5"
regex = "0.2.3"
reqwest = "0.8.1"
serde = "1.0.23"
serde_derive = "1.0.23"
serde_json = "1.0.6"
time = "0.1.38"
tree_magic = "0.2.0"
url = "1.6.0"

[dependencies.cairo-rs]
features = ["png"]
version = "0.3.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"
