[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-api"
version = "0.1.0"
workspace = "../"

[dependencies]
gdk = "0.7.0"
gdk-pixbuf = "0.3.0"
#gdk-pixbuf-sys = "0.5.0"
glib = "0.4.1"
mime = "0.3.5"
regex = "0.2.6"
reqwest = "0.8.5"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
time = "0.1.39"
tree_magic = "0.2.0"
url = "1.7.0"
unicode-segmentation = "1.2.0"
urlencoding = "1.0.0"

[dependencies.cairo-rs]
features = ["png"]
version = "0.3.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"
