[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-api"
version = "0.1.0"
workspace = "../"

[dependencies]
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
#gdk-pixbuf-sys = "0.5.0"
glib = "0.5.0"
mime = "0.3.5"
regex = "0.2.10"
reqwest = "0.8.5"
serde = "1.0.38"
serde_derive = "1.0.38"
serde_json = "1.0.14"
time = "0.1.39"
tree_magic = "0.2.0"
url = "1.7.0"
unicode-segmentation = "1.2.0"
urlencoding = "1.0.0"

[dependencies.cairo-rs]
features = ["png"]
version = "0.4.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"
