[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
build = "build.rs"
name = "fractal-gtk"
version = "0.1.22"
workspace = "../"

[dependencies]
failure = "0.1.1"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
gdk-pixbuf-sys = "0.6.0"
gio = "0.4.0"
glib = "0.5.0"
notify-rust = "3.4.2"
pango = "0.4.0"
secret-service = "0.4.0"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.13"
url = "1.7.0"
rand = "0.4.2"
html2pango = { git = "https://gitlab.gnome.org/World/html2pango" }

[dependencies.cairo-rs]
features = ["png"]
version = "0.4.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.fractal-api]
path = "../fractal-api"

[dependencies.gtk]
features = ["v3_22"]
version = "0.4.0"
