[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
build = "build.rs"
name = "fractal-gtk"
version = "0.1.26"
workspace = "../"

[dependencies]
failure = "0.1.1"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
gdk-pixbuf-sys = "0.6.0"
gio = "0.4.0"
glib = "0.5.0"
notify-rust = "3.4.2"
pango = "0.4.0"
secret-service = "0.4.0"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
url = "1.7.0"
rand = "0.4.2"
html2pango = { git = "https://gitlab.gnome.org/World/html2pango" }
comrak = "0.2.9"
ammonia = "1.1.0"

# newer stuff do not compile inside flatpak
html5ever = "=0.22.0"
string_cache = "=0.7.1"
string_cache_codegen = "=0.4.0"

[dependencies.cairo-rs]
features = ["png"]
version = "0.4.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.fractal-api]
path = "../fractal-api"

[dependencies.gtk]
features = ["v3_22"]
version = "0.4.0"
