[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
build = "build.rs"
name = "fractal-gtk"
version = "3.29.1"
workspace = "../"

[dependencies]
failure = "0.1.1"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
gdk-pixbuf-sys = "0.6.0"
gio = "0.4.1"
glib = "0.5.0"
gstreamer = "0.11.3"
gstreamer-player = "0.11.3"
notify-rust = "3.4.2"
pango = "0.4.0"
secret-service = "0.4.0"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
url = "1.7.0"
rand = "0.4.2"
html2pango = { git = "https://gitlab.gnome.org/World/html2pango" }
comrak = "0.2.9"
gettext-rs = { git = "https://github.com/danigm/gettext-rs", branch = "no-gettext", features = ["gettext-system"] }
regex = "1.0.0"
tree_magic = "0.2.0"
log = "0.4.2"
fragile = "0.2.1"

[dependencies.cairo-rs]
features = ["png"]
version = "0.4.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.fractal-matrix-api]
path = "../fractal-matrix-api"

[dependencies.gspell]
git = "https://gitlab.gnome.org/jsparber/gspell-rs"

[dependencies.gtk]
features = ["v3_22"]
version = "0.4.0"
