[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-matrix-api"
version = "3.29.1"
workspace = "../"

description = """
Library to communicate with a Matrix.org server
"""
keywords = [
    "matrix", "fractal"
]
license = "GPL-3.0"
repository = "https://https://gitlab.gnome.org/World/fractal"
documentation = "https://world.pages.gitlab.gnome.org/fractal/fractal_matrix_api/index.html"

[dependencies]
gdk = { optional = true, version = "0.8.0" }
gdk-pixbuf = { optional = true, version = "0.4.0" }
#gdk-pixbuf-sys = { optional = true, version = "0.5.0" }
glib = { optional = true, version = "0.5.0" }
mime = "0.3.5"
pango = { optional = true, version = "0.4.0" }
pangocairo = { optional = true, version = "0.5.0" }
regex = "0.2.10"
reqwest = "0.8.5"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
time = "0.1.39"
tree_magic = "0.2.0"
url = "1.7.0"
unicode-segmentation = "1.2.0"
urlencoding = "1.0.0"
md5 = "0.3.7"

[dependencies.cairo-rs]
features = ["png"]
version = "0.4.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[features]
default = [] # "gfx" ]
gfx = [ "gdk", "gdk-pixbuf", "glib", "pango", "pangocairo" ]
